--- a/templates/admin/layout_admin.html.twig
+++ b/templates/admin/layout_admin.html.twig
@@ -165,6 +165,12 @@
                                 <span class="hide-menu"> Laporan Tahunan</span>
                             </a>
                         </li>
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="{{ path('laporan_pelanggan') }}">
+                                <i class="fa fa-users"></i>
+                                <span class="hide-menu"> Laporan Pelanggan </span>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
