--- a/templates/admin/layout_admin.html.twig
+++ b/templates/admin/layout_admin.html.twig
@@ -167,7 +167,7 @@
                         </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link sidebar-link" href="{{ path('laporan_pelanggan') }}">
-                                <i class="fa fa-users"></i>
+                                <i class="fa fa-file"></i>
                                 <span class="hide-menu"> Laporan Pelanggan </span>
                             </a>
                         </li>
